--- a/inb.html
+++ b/inb.html
@@ -11,6 +11,12 @@
 	    border: 1px dotted silver;
 	    padding: 4px;
 	  }
+
+          .content {
+            padding: 2px;
+            margin: 0;
+          }
+
 	</style>
 </head>
 <body>
