tidy up generated html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Cross-Browser Rich Text Editor</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-	<script language="JavaScript" type="text/javascript" src="inb-rte.js"></script>
+	<script language="JavaScript" type="text/javascript" src="richtext.js"></script>
 	<style>
 	  .message {
 	    width: 6in;
@@ -28,9 +28,10 @@
 </head>
 <body>
 
-<h1>Inline RTE Activation</h1>
-
-
+<h1>Rich Text Editor</h1>
+<p>
+This is an adaptation of an early version of <a href="http://www.kevinroth.com/rte/demo.htm">RTE</a> to provide an object oriented interface to a dynamic rich text editing javascript control.
+</p>
 <div class="message">
   <div class="content" id="content1234">
     <h2>Hello</h2>
